ENG-3775: version upgrade 0.0.11

--- a/pages/test-descriptor.yaml
+++ b/pages/test-descriptor.yaml
@@ -1,6 +1,6 @@
 descriptorVersion: v5
-code: test_bundle
-parentCode: my_homepage
+name: test_bundle
+parentName: global:my_homepage
 titles:
   en: Test bundle
   it: Test bundle
