--- a/widgets/param-menu-descriptor.yaml
+++ b/widgets/param-menu-descriptor.yaml
@@ -6,23 +6,11 @@ titles:
   it: Menu Parametrico
 group: free
 customUi: |-
-  <#assign wp=JspTaglibs["/aps-core"]>
+    <#assign wp=JspTaglibs["/aps-core"]>
 
-  <@wp.currentPage param="code" var="currentPageCode" />
-
-  <@wp.fragment code="entando_ootb_carbon_include" escapeXml=false />
-
-  <#assign navstrs = [] />
-  <@wp.nav var="page">
-    <#assign navstr = ["{\"code\": \"" + page.code + "\", \"title\": \"" + page.title + "\", \"level\": \"" + page.level + "\", \"url\": \""+ page.url +"\", \"voidPage\": " + page.voidPage?string("true", "false") + "}"]  />
-    <#assign navstrs = navstrs + navstr />
-  </@wp.nav>
-  <#assign nav_json_string = navstrs?join(", ") />
-
-  <navigation-bar-widget
-    current-page="${currentPageCode}"
-    nav-items="[${nav_json_string?html}]"
-  ></navigation-bar-widget>
+    <h2>PAGE <@wp.currentPage param="code" /></h2>
+    <h2>Widget <@wp.currentWidget param="code" /></h2>
+    <p>param navSpec <@wp.currentWidget param="config" configParam="navSpec" /> - param title <@wp.currentWidget param="config" configParam="title" /></p>
 params:
   - name: navSpec
     description: Rules for the Page List auto-generation
